--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,14 @@
 /* nav-section-css */
 
 #site-header {
-  /* border: 1px solid red; */
+  border: 1px solid red;
   background-color: #ffffff;
-  max-width: 1600px;
+  width: 2195px;
 }
 
 #site-header .nav-container {
   /* border: 1px solid red; */
-  max-width: 1600px;
+  max-width: 2195px;
   max-height: 92px;
   margin: auto 0;
   display: flex;
@@ -55,6 +55,8 @@
 
 .nav-container .navbar {
   padding: 34px;
+
+  /* border: 3px solid pink; */
 }
 
 .nav-container .navbar ul {
@@ -110,7 +112,7 @@
 
 #hero-section .hero-content {
   /* border: 2px solid red; */
-  max-width: 1600px;
+  max-width: 2195px;
   max-height: 674px;
   margin: 118px 120px 120px 177px;
   /* padding: 51px 295px 295px 76px; */
@@ -217,8 +219,8 @@
 /* points-section-css */
 
 #points {
-  border: 2px solid red;
-  max-width: 1600px;
+  /* border: 2px solid red; */
+  max-width: 2195px;
   /* margin-left: 120px; */
 }
 
@@ -254,8 +256,8 @@
 }
 
 .cards .single-card {
-  flex: 1;               
-  max-width: 322px;      
+  flex: 1;
+  max-width: 322px;
   background: #ffffff;
   border-radius: 12px;
   padding: 32px 24px;
@@ -266,7 +268,7 @@
   align-items: center;
   gap: 16px;
 
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.103);
 }
 
 .single-card .icon {
