--- a/styles.css
+++ b/styles.css
@@ -305,7 +305,7 @@
   height: 900px;
   display: flex;
   text-align: left;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   gap: 10px;
   justify-content: center;
   align-items: center;
